--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -57,3 +57,12 @@ a {
 a:hover {
     background-color: #005f99;
 }
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #007acc;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
