--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -2,6 +2,11 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: "Roboto Slab", serif;
+    background-color: #f0efe7;
 }
 .text-center{
     text-align: center;
