--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,40 +1,62 @@
+:root {
+  --primary-color: #f64d27;
+  --secondary-color: #f0efe7;
+}
+
 /* #region General styles */
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-body{
-    font-family: "Roboto Slab", serif;
-    background-color: #f0efe7;
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+  font-family: "Roboto Slab", serif;
+  background-color: var(--secondary-color);
 }
-.text-center{
-    text-align: center;
+.text-center {
+  text-align: center;
 }
-a{
-    text-decoration: none;
-    color: #fbc7bb;
+a {
+  text-decoration: none;
+  color: #fbc7bb;
 }
 
 /* #endregion General styles */
 
-.wrapper{
-    max-width: 80%;
-    margin: 0 auto;
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 80%;
+  margin: 0 auto;
 }
 
-.article-block_img1{
-    width: 100%;
+.article-block_img1 {
+  width: 100%;
 }
 
-
+.wrapper > .article-block {
+  width: 50%;
+  display: inline;
+}
+.wrapper > .article-block:first-child {
+  width: 100%;
+}
+.article-block_button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+}
 
 /* #region Footer styles */
-.footer{
-    background-color: #f64d27;
-    padding: 20px;
-    color: #f0efe7;
-
+.footer {
+  background-color: var(--primary-color);
+  padding: 20px;
+  color: #f0efe7;
 }
 /* #endregion Footer styles */
-
