--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -17,3 +17,20 @@ form {
     max-width: 400px;
     margin: 0 auto;   
 }
+
+label {
+    display: block;
+    margin: 20px 0 20px 0;
+    font-size: bold;
+    color: #6a1b9a;
+}
+
+input, select {
+    width: 100%;
+    margin-bottom: 20px;
+    border: 2px solid #ba68c8;
+    border-radius: 4px;
+    box-sizing: border-box;
+    background-color: #fce4ec;
+    color: #6a1b9a;
+}
