updated the colour of Header

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -8,7 +8,7 @@ body{
     background-color: rgb(117, 102, 24);
 }
 header {
-    background-color: rgba(0, 0, 0,.5);
+    background-color: rgba(72, 71, 75, 0.9);
     padding: 50px;
     margin-bottom: 30px;
     text-align: center;
