--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -3,5 +3,7 @@ body{
     font-optical-sizing: auto;
     font-weight: 400px;
     font-style: normal;
+    color:#023047;
+    text-align: center;
 }
 
