Added missing semicolon to margin-bottom property

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -29,7 +29,7 @@ article img {
     padding: 50px 5%;
     background-color: #f8f8f8; 
     justify-content: center;
-    margin-bottom: 100px
+    margin-bottom: 100px;
     
   }
 
