--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -17,17 +17,16 @@ header{
  
 }
 h1,h2{
-  margin:5px;
+  margin: 5px;
  
 }
 article{
-  padding-left: 20px;
+  padding: 10px;
 }
 
 article:first-child {
   margin-bottom: 10px;
-  border: 1px solid white;
-  border-radius: 15px;
+  border: 1px solid rgb(211, 206, 201);
   height: auto;
 }
 
@@ -39,24 +38,22 @@ article:first-child {
   display: flex;
 }
 
-#other-article-title{
+#other-articles-container{
   display: flex;
-  justify-content: space-between;
-  margin-left: 100px;
+  justify-content:left;
   width: 100%;
-  height: 500px;
-  margin:5px;
-  border: 1px solid white;
-  border-radius: 15px;
+  height: 450px;
+  border: 0px solid rgb(202, 142, 64);
 }
 .article-two-three-width{
-  width: 48%;
+  width: 49%;
   height: auto;
-  border: 1px solid white;
-  margin: 0;
-height: auto;
+  border: 1px solid rgb(211, 206, 201);
 }
+#article-three-section-leftmargin{
+  margin-left: 2%;
 
+}
 .button:hover {
   background-color: rgb(202, 142, 64);
   color:white;
@@ -68,26 +65,29 @@ height: auto;
 }
 p{
   margin: 8px;
-  line-height: 25px;
+  line-height: 30px;
 }
 .section-content{
   text-align: justify;
-
+  
 }
 
 #footer {
   font-size: 22px;
+  font-style: italic;
   position:fixed;
   left:0;
   bottom:0px;
   height:70px;
   width:100%;
   background: wheat;
+  text-align: center;
+  
 }
 
 a.button {
   height: 30px;
-  font-size: 20px;
+  font-size: 22px;
   padding: 1px 6px;
   border: 1px outset buttonborder;
   border-radius: 3px;
