--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'poppins', sans-serif;
     padding: 20px;
     background-color: linear-gradient(#fce4ec, #ba68c8);
 }
@@ -8,6 +8,7 @@ h1 {
     font-size: 2rem;
     color: #6a1b9a;
     text-align: center;
+    font-family: 'poppins', sans-serif;
 }
 
 form {
