--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -50,7 +50,7 @@ input:required, select:required {
 button {
     width: 50%;
     padding: 8px;
-    background-color: #ba68c8;
+    background-color: #8e44ad;
     color: white;
     border: none;
     border-radius: 5px;
@@ -61,7 +61,7 @@ button {
 }
 
 button:hover {
-    background-color: #ab47bc;
+    background-color: #732d91;
     transform: scale(1.05);
 }
 
