--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'poppins', sans-serif;
+    font-family: "Poppins", sans-serif
     padding: 20px;
     background-color: linear-gradient(#fce4ec, #ba68c8);
 }
