--- a/Form-Controls/css/styles.css
+++ b/Form-Controls/css/styles.css
@@ -12,6 +12,91 @@ html {
 }
 
 .container {
-  width: 128rem;
+  width: 30rem;
   margin: 0 auto;
+  margin-top: 5rem;
+  padding: 2rem;
+
+  /* background-color: bisque; */
+}
+
+header {
+  margin-bottom: 2rem;
+}
+
+form {
+  display: grid;
+  justify-items: start;
+  row-gap: 2rem;
+}
+
+.grid--1 {
+  display: grid;
+  justify-content: center;
+  row-gap: 1rem;
+}
+
+label,
+p {
+  font-size: 1.5rem;
+  letter-spacing: 1px;
+  color: #00000090;
+}
+
+input {
+  padding: 1rem 1.5rem;
+  border-radius: 0.8rem;
+  border: 1px solid #c1c1c1;
+  letter-spacing: 0.5px;
+  font-weight: 100;
+  color: #00000090;
+  font-size: 1.5rem;
+  box-shadow: 1px 1px 5px #00000012;
+}
+
+input:focus {
+  outline: none;
+}
+
+select {
+  padding: 1rem 1.5rem;
+  border-radius: 0.8rem;
+  color: #00000090;
+
+  border: 1px solid #c1c1c1;
+  cursor: pointer;
+}
+
+select:focus {
+  outline: none;
+}
+
+#date {
+  cursor: pointer;
+  margin-bottom: 3rem;
+}
+
+button {
+  font-family: inherit;
+  font-size: 2rem;
+  font-weight: 300;
+  letter-spacing: 1.2px;
+  padding: 1rem 4rem;
+  border: 1px solid #0000001f;
+  border-radius: 0.8rem;
+  background-color: #0984e3;
+  color: #fff;
+  cursor: pointer;
+}
+
+.radio-box-holder {
+  display: flex;
+  gap: 2rem;
+}
+
+#navy-blue,
+#green-jungle,
+#gray {
+  width: 3rem;
+  box-shadow: none;
 }
