--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -4,6 +4,7 @@ body{
       box-sizing: border-box;
        display: inline-block;
        }
+
     button {
         width: 60%;
         padding:5px;
@@ -15,18 +16,21 @@ body{
     }
     
     
-    .form {
+    .form { 
         padding-inline: 40px;
         border: 2px solid black;
         width: 200px;
         padding: 10px;
     }
-        div {
+        /* div {
       border-radius: 5px;
       background-color: #f2f2f2;
       padding: 15px;
        
     }
-    
-    
+     */
+  div{
+    margin-bottom: 12px;
+  }
+  
       
