--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -39,6 +39,7 @@ main {
 
 .article-photo {
   width: 100%;
+  object-fit: fill;
   aspect-ratio: 3/1;
 }
 .article-title {
@@ -69,5 +70,4 @@ main {
   text-align: center;
   padding: 20px;
   background-color: #f4f4f4;
-  bottom: 0;
 }
