--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,104 +1,78 @@
-* {
+
+/* General page styling */
+body {
+    font-family: 'arial', sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Times new roman', sans-serif;
-    color: blue;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background-color: #f4f4f4;
-}
-
-
+    background-color: blanchedalmond;
+  }
+  
 header {
-    text-align: center;
-    padding: 30px;
-    background-color: #724caf;
-    color: rgb(112, 106, 106);
+  text-align: center;
+  background-color: #8a7777;
+  color: white;
+  padding: 20px 0;
+  border: 2px solid #269a37; 
+  }
+
+  /* Article image styling */
+article img {
+  width: 100%;
+  height: auto;
+  max-height: 200px;
+  object-fit: cover;
 }
 
-header h1 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
+  /* Main container for all articles */
+  .articles {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 50px 5%;
+    background-color: #f8f8f8; 
+    justify-content: center;
+    margin-bottom: 100px;
+    
+  }
+
+  article {
+    flex: 1 1 50%;
+    padding: 10px;
+    border: 1.5px solid #be3e3e; 
+    box-sizing: border-box; 
 }
-
-header p {
-    font-size: 1.2rem;
-    color: #eee;
-}
-
-
-#articles {
-    flex-grow: 1;
-    padding: 20px;
-}
-
-#articles img {
-    width: 100%;
-    height: auto;
-}
-
-#articles article {
-    background-color: #726a6a;
-    padding: 20px;
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-
-#articles h2 {
-    font-size: 1.8rem;
-    margin-bottom: 10px;
-}
-
-#articles p {
-    font-size: 1rem;
-    margin-bottom: 15px;
-}
-
-#articles a {
+  
+  /* Style for the first article (Article Title1) */
+  article:first-child {
+    flex: 1 1 100%;
+    background-color: white;
+    background-size: 150% auto;
+    
+  }
+ 
+  .articles a {
     display: inline-block;
-    padding: 10px 20px;
-    background-color: #a0a5a0;
+    background-color: #973333;
     color: white;
+    padding: 10px 15px;
     text-decoration: none;
     border-radius: 5px;
+    
 }
 
-#articles a:hover {
-    background-color: #5d388e;
+.articles a:hover {
+  background-color: #6e7ba7;
+  color: #0a0904;
 }
 
-
-.featured-article {
-    background-color: #7a7a71;
-    border: 2px solid #972dfb;
-}
-
-
-.article-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-}
-
-article:first-child {
-    background-color: #0f0e0e;
-    border: 2px solid #504f4d;
-}
-
-footer {
+  /* Footer styling */
+  footer {
     text-align: center;
-    padding: 15px;
-    background-color: #272927;
+    font-weight: bold;
+    background-color: #8a7777;
     color: white;
     position: fixed;
+    padding: 10px;
     width: 100%;
     bottom: 0;
-}
-
-
+    border-top: 2px solid #be3e3e;
+  }
