--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -42,7 +42,7 @@ article:first-child {
   display: flex;
   justify-content:left;
   width: 100%;
-  height: 450px;
+  height: 780px;
   border: 0px solid rgb(202, 142, 64);
 }
 .article-two-three-width{
@@ -62,6 +62,10 @@ article:first-child {
 #git-logo{
   width: 200px;
   height: 100px;
+}
+.article-two-three-image-size{
+  width: 400px;
+  height: 350px;
 }
 p{
   margin: 8px;
