Improved html structure and style with the psuedo class

--- a/Wireframe/index.css
+++ b/Wireframe/index.css
@@ -8,33 +8,38 @@ body {
    text-align: center;
    padding: 20px;
   } 
-
-  #a1 {
-    margin: auto;
-    width: 90%;
-    border: 3px solid #f5ebe0;
-    padding: 10px;
- }
-
+ 
  #logo {
     display: block;
     margin: 0 auto;
  }
-sec2 {
-    display: grid; 
-    grid-template-columns: 1fr 1fr; 
-    grid-gap: 20px; 
-    border: 1px solid black; 
-    width: 50%; 
-  }
+ button{
+  padding: 10px, 10px;
+  background-color: #F1F1F1;
+  border-radius: 5px;
+
+ }
+
   article:first-child {
-    background-color: lightblue;
-    border: 2px solid blue;
-
+    background-color: brown;
+    border: 2px solid rgb(15, 15, 15);
+    padding: 20px 20px;
+    margin-bottom: 20px;
   }
 
-footer {
-    position: fixed;
+  article:not(:first-child){
+    display: inline-block; 
+    border: 1px solid black;
+    background-color: brown;
+    width: 46%;
+    padding: 20px 20px;
+    margin-top: 0px;
+    vertical-align: top;
+    height: 250px;
+  }
+
+footer{
+    
     bottom: 0;
     left: 0;
     right: 0;
