--- a/Wireframe/style.css
+++ b/Wireframe/style.css
@@ -2,41 +2,35 @@ body{
     font-family: 'Courier New', Courier, monospace;
 }
 
-.wrapper {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    border: solid 2px black;
-    padding: 0;
-   
-}
 
 header {
-    text-align: center;
-    width: 400px;
+    background-color: brown;
     margin: 0 auto 5rem auto;
+    text-align: center;
+    color:azure;
+    padding: 2rem 0 2rem 0;
+    margin-bottom: 2rem;
 }
 
 article:first-child {
-    width: 100%;
-    border: 2px solid red;
-    
+    display: block;
+   margin-bottom: 1rem;
+   
 }
 
-.article1-img {
-    margin: 0 auto 0 auto;
-    width: 800px;
-    height: 350px
+article:not(:first-child){
+    display: inline-block;
+    width: 40%;
+
 }
 
 .btn-more {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 }
 
 .article-container {
     display: flex;
-    justify-content: space-between;
-    border: 2px solid green;
-    
+    gap: 20px;
+    flex: 1;
 }
 
