--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -10,7 +10,7 @@ form {
     max-width: 400px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: white;
     border-radius: 8px;
     font-family: Arial, sans-serif;
 }
@@ -56,12 +56,10 @@ input, select {
     display: block;
 }
 
-
 input[type="text"]:focus, input[type="email"]:focus, input[type="date"]:focus, select:focus {
     border-color: green;
     outline: none;
 }
-
     h1 {
         font-size: 20px;
     }
