fixed bags,pin the footer at the bottom and added article tag

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -28,13 +28,7 @@
       url("../fonts/lato-v15-latin-900.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
-html,
-body {
-  height: 100%;
-}
-
 html {
-  height: 100%;
   scroll-behavior: smooth;
   box-sizing: border-box;
 }
@@ -45,13 +39,20 @@ html {
 }
 
 body {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   font-family: lato;
   font-style: normal;
   font-size: 16px;
   line-height: 1.2;
   font-weight: normal;
   color: black;
+}
+
+.main {
+  flex: 1;
+  padding: 20px;
 }
 
 img {
@@ -63,21 +64,11 @@ a {
   color: white;
 }
 
-.page {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.main {
-  flex: 1 0 auto;
-}
-
 .header {
   margin: 0 auto;
 }
 
-.title {
+.wrapper_title {
   text-align: center;
 }
 
@@ -88,7 +79,6 @@ a {
 
   flex-direction: column;
 }
-
 
 img {
   width: 100%;
@@ -146,19 +136,19 @@ img {
   padding: 20px;
 }
 
-.page {
+/* .page {
   overflow: hidden;
-}
+} */
 
 .footer {
-  flex: 0 0 auto;
+  /* flex: 0 0 auto; */
   width: 100%;
-  height: 100px;
+  /* height: 100px; */
   background-color: black;
 }
 
 .footer-git {
-  padding-top: 30px;
+  padding: 30px;
   text-align: center;
 }
 
