--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -10,6 +10,12 @@
 
 section:first-child{
     border:2px solid blue;
+    width:fit-content;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    
     }
 
  #hero{
