--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -1,39 +1,3 @@
-/* lato-regular - latin */
-@font-face {
-  font-family: "Lato";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Lato Regular"), local("Lato-Regular"),
-    url("../fonts/lato-v15-latin-regular.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/lato-v15-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* lato-700 - latin */
-@font-face {
-  font-family: "Lato";
-  font-style: normal;
-  font-weight: 700;
-  src: local("Lato Bold"), local("Lato-Bold"),
-    url("../fonts/lato-v15-latin-700.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/lato-v15-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* lato-900 - latin */
-@font-face {
-  font-family: "Lato";
-  font-style: normal;
-  font-weight: 900;
-  src: local("Lato Black"), local("Lato-Black"),
-    url("../fonts/lato-v15-latin-900.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/lato-v15-latin-900.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-html,
-body {
-  height: 100%;
-}
-
 html {
   scroll-behavior: smooth;
   box-sizing: border-box;
@@ -45,7 +9,11 @@ html {
 }
 
 body {
-  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   font-family: lato;
   font-style: normal;
   font-size: 16px;
@@ -69,13 +37,6 @@ header {
   margin-top: 60px;
 }
 
-.wrapper {
-  margin: 0 auto;
-
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
 .title {
   text-align: center;
 }
@@ -94,6 +55,30 @@ h2 {
   margin-top: 20px;
 }
 
+.btn {
+  padding: 5px 35px;
+
+  box-sizing: border-box;
+  border: 1px solid #0a0300;
+  border-radius: 5px;
+
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 26px;
+
+  text-align: center;
+  cursor: pointer;
+  color: #050100;
+  background-color: #ffffff;
+  transition: all 0.3s ease-in;
+}
+
+.btn:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
 .main {
   margin: 0 auto;
   max-width: 400px;
@@ -102,7 +87,7 @@ h2 {
 
 .footer {
   width: 100%;
-  flex: 0 0 auto;
+
   background-color: aqua;
   text-align: center;
 }
