--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -21,15 +21,16 @@ Paragraph default:
 
 - Primary: #16a34a
 - Tints:
-
-- Shades: 
     #d0eddb
 
-- Accents:
+- Shades: 
+    #0f7234
+
+- Accents: #ff7d00
 
 - Greys
     #555
-    #333
+    #ddd
 
 --- 05 SHADOWS
 
@@ -135,16 +136,31 @@ body {
 .form select {
 }
 
+.form *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.4rem rgba(255, 123, 0, 0.5);
+}
+
+input::placeholder {
+  color: #555
+}
+
 .form button {
   grid-column: 1 / -1;
   width: 40%;
   margin: 0 auto;
   margin-top: 2.4rem;
   background-color: #16a34a;
-  color: #ccc;
+  color: #ddd;
   font-size: 1.8rem;
   font-weight: 800;
+  transition: all 0.3s;
 }
+
+.form button:hover, .form button:active {
+  background-color: #0f7234;
+}
+
 
 
 /* FOOTER */
