--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -8,14 +8,14 @@
 Default: 400
 Medium: 500
 Semi-bold: 600
-Bold: 700
+Bold: 800
 
 - Line heights
 Default: 
 Paragraph default: 
 
 - Letter spacing
--0.5px
+
 
 --- 02 COLORS
 
@@ -96,8 +96,6 @@ body {
   gap: 2.4rem;
 }
 
-
-
 /* FORM */
 
 .form {
@@ -105,7 +103,7 @@ body {
   grid-template-columns: 1fr 1fr;
   padding: 2.4rem;
 
-  box-shadow: 0 0 2.4rem rgba(0, 0, 0, 0.2);;
+  box-shadow: 0 0 2.4rem rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
 
@@ -122,18 +120,11 @@ body {
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
 }
 
-.form input:focus {
-  /* background: transparent; */
-}
-
 .form label {
   display: block;
   font-size: 1.8rem;
   padding: 0.8rem;
   font-weight: 500;
-}
-
-.form select {
 }
 
 .form *:focus {
@@ -142,7 +133,7 @@ body {
 }
 
 input::placeholder {
-  color: #555
+  color: #555;
 }
 
 .form button {
@@ -157,11 +148,10 @@ input::placeholder {
   transition: all 0.3s;
 }
 
-.form button:hover, .form button:active {
+.form button:hover,
+.form button:active {
   background-color: #0f7234;
 }
-
-
 
 /* FOOTER */
 
