--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -1,53 +1,3 @@
-/*
---- 01 TYPOGRAPHY SYSTEM
-
-- Font sizes (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-- Font weights
-Default: 400
-Medium: 500
-Semi-bold: 600
-Bold: 800
-
-- Line heights
-Default: 
-Paragraph default: 
-
-- Letter spacing
-
-
---- 02 COLORS
-
-- Primary: #16a34a
-- Tints:
-    #d0eddb
-
-- Shades: 
-    #0f7234
-
-- Accents: #ff7d00
-
-- Greys
-    #555
-    #ddd
-
---- 05 SHADOWS
-
-0 0 2.4rem rgba(0, 0, 0, 0.1);
-0 1px 5px rgba(0, 0, 0, 0.2)
-
---- 06 BORDER-RADIUS
-
-Default: 10px
-Medium: 16px
-
---- 07 WHITESPACE
-
-- Spacing system (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-*/
-
 /* FIX FOR WHEN AUTOFILL USED. BACKGROUND CHANGES TO WHITE, WHICH IS NOT WHAT I WANT */
 
 input:-webkit-autofill,
@@ -56,8 +6,12 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 40px #73c892 inset !important;
 }
-/* GENERAL */
 
+input:-webkit-autofill {
+  -webkit-text-fill-color: #333 !important;
+}
+
+/* GENERAL */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -70,7 +24,7 @@ html {
 
 body {
   font-family: Tahoma, Geneva, Verdana, sans-serif;
-  color: #555;
+  color: #333;
   background-color: #d0eddb;
 }
 
@@ -80,7 +34,6 @@ body {
 }
 
 /* HEADER */
-
 .header {
   text-align: center;
 }
@@ -90,17 +43,28 @@ body {
   padding: 3.2rem;
 }
 
-.grid {
+/* GRID CLASSES */
+.grid--form {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2.4rem;
 }
 
-/* FORM */
-
-.form {
+.grid--content {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 2.4rem;
+}
+
+@media (max-width: 768px) {
+  .grid--content,
+  .grid--form {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* FORM */
+.form {
   padding: 2.4rem;
 
   box-shadow: 0 0 2.4rem rgba(0, 0, 0, 0.2);
@@ -133,7 +97,7 @@ body {
 }
 
 input::placeholder {
-  color: #555;
+  color: #777;
 }
 
 .form button {
@@ -142,7 +106,7 @@ input::placeholder {
   margin: 0 auto;
   margin-top: 2.4rem;
   background-color: #16a34a;
-  color: #ddd;
+  color: #222;
   font-size: 1.8rem;
   font-weight: 800;
   transition: all 0.3s;
@@ -151,14 +115,13 @@ input::placeholder {
 .form button:hover,
 .form button:active {
   background-color: #0f7234;
+  transform: scale(1.02);
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
 }
 
 /* FOOTER */
-
 .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
+  margin-top: 4.8rem;
   width: 100%;
   text-align: center;
 }
