--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,6 +1,6 @@
 /* General page styling */
 body {
-    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-family: Georgia, serif;
     margin: 0;
     padding: 0;
     background-color: white;
