--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,14 +1,25 @@
 
 body{
-    font-family: Georgia, serif;
-    background-color: rgba(189, 226, 188, 0.628);
+    font-family: Comic Sans MS, cursive, sans-serif;
+    background-color: rgb(253, 253, 253);
+    margin: 0;
 }
 
 header{
-
+    text-align: center;
+    color: rgb(3, 50, 17);
+    padding: 40px 0;
+    background-color: rgba(189, 226, 188, 0.628);
 }
 article{
 
+}
+
+article img{
+    width: 100%;
+    height: auto;
+    max-height: 550px;
+    object-fit: cover;
 }
 
 .articles{
@@ -17,5 +28,7 @@ article{
 
 
 footer{
-
+    text-align: center;
+    background-color: rgba(189, 226, 188, 0.628);
+    padding: 20px;
 }
