remove radio buttons for size and add input options instead to increase the accessibility

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -2,9 +2,12 @@ body{
     line-height:40px;
 }
 fieldset{
-    width:300px;
+    width:500px;
     
 }
 legend{
     font-family: sans-serif;
+}
+.size{
+    justify-content: space-around;
 }
