margin the fieldset

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -2,12 +2,21 @@ body{
     line-height:40px;
 }
 fieldset{
-    width:500px;
+    width:80%;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    
     
 }
 legend{
     font-family: sans-serif;
+    
 }
-.size{
-    justify-content: space-around;
+
+
+form{
+    color: antiquewhite;
+    width:50%;
+    background-color: black;
 }
