--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -59,3 +59,23 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+input[type="submit"] {
+    background-color: #3ba80c; 
+    color: white; 
+    padding: 10px; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer;
+    font-size: 16px; 
+    width: 40%; 
+  }
+ 
+  input[type="submit"]:hover {
+    background-color: #0056b3; 
+  }
+  
+  form > div {
+    display: flex; 
+    justify-content: center; 
+  }
