--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -50,6 +50,14 @@ main {
   padding: 15px;
 }
 
+.articles .article:first-child {
+  border: 2px solid #8A2BE2;
+  background-color: #dcdcdcc9;
+  padding: 20px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+
 .article-image {
   width: 350px;
   height: 200px;
