--- a/Wireframe/index.css
+++ b/Wireframe/index.css
@@ -1,50 +1,60 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #f0efe7;
+    color:  #101820;
+    ;
   } 
 
  header {
-   background-color: #F1F1F1;
+   /* background-color: #F1F1F1; */
    text-align: center;
-   padding: 20px;
+   padding: 2px;
+   height: fit-content;
   } 
  
  #logo {
     display: block;
     margin: 0 auto;
+    height:100px;
+    width: 200px;
+    
  }
  button{
   padding: 10px, 10px;
-  background-color: #F1F1F1;
+  background-color: #F7F9FC;
   border-radius: 5px;
-
+  color: #f14e32;
  }
 
+section{
+  /* padding: 30px 30px; */
+  text-align: left;
+  
+  
+
+}
   article:first-child {
-    background-color: brown;
-    border: 2px solid rgb(15, 15, 15);
-    padding: 20px 20px;
-    margin-bottom: 20px;
+    /* background-color: brown; */
+    height: 300px;
+    /* width: 96%;
+    height: 400px; */
   }
 
   article:not(:first-child){
     display: inline-block; 
-    border: 1px solid black;
-    background-color: brown;
+    background-color: #d4533c;
     width: 46%;
-    padding: 20px 20px;
-    margin-top: 0px;
+    margin-top: 20px;
     vertical-align: top;
     height: 250px;
+    margin-bottom: 10px;
+    padding: 20px;
   }
 
 footer{
-    
-    bottom: 0;
-    left: 0;
-    right: 0;
+    /* position: fixed; */
     width: 100%;
-    border: 3px solid #f5ebe0;
     background-color: #F1F1F1;
     text-align: center;
 }
