--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -10,29 +10,33 @@ body{
     text-align: center;
     align-items: center;
     margin: 2.5rem 5rem;
-    border: 2rem solid white;
-    border-radius: 0.2rem;
    
 }
 
 .header-container{
+    padding-top: 0.5rem;
     background-color: white;
     border-bottom:0.5rem solid rgb(207, 205, 202);
     border-radius: 0.3rem;
 }
 
 .main-section{ 
+    display: flex;
     padding: 2rem 0;
     border-radius: 0.3rem;
 }
+.main-section:first-child{
+   display: flex;
+   flex-direction: column;
+}
 .left-section{
-    width: 45%;
-    float: left;
-}
-.right-section{
-    float: right;
-    width: 45%;
-}
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    float: left; 
+    
+} 
+
 h1,h2,h3,h4{
     font-weight: bold;
     color:rgb(98, 98, 97)
@@ -40,29 +44,19 @@ h1,h2,h3,h4{
 a:link{
     text-decoration: none;
     cursor: pointer;
-    color: rgb(57, 57, 138);
+    color: rgb(23, 23, 211);
    
-}
-  a:visited {
-    color: rgb(52, 72, 158);
-  }
+   }
+
   a:hover {
-    color: hotpink;
+    color: rgb(182, 35, 192);
+    text-decoration: underline;
   }
-  a:active {
-    color: blue;
-  }
+ 
 
 .footer-container{
-    margin-top:16rem;
     padding: 2rem 0;
     background-color: rgb(207, 205, 202);
+   
 }
 
-@media screen  and (max-width:640px){
-    .footer-container{
-        margin-top:50rem;
-       
-    }
-    
-}
