--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -55,7 +55,8 @@ a:link{
  
 
 .footer-container{
-    padding: 2rem 0;
+    border-radius: 0.3rem;
+    padding: 1.5rem 0;
     background-color: rgb(207, 205, 202);
    
 }
