--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -3,7 +3,7 @@ body{
     line-height:40px;
 }
 fieldset{
-    width:90%;
+    width:fit-content;
     display:block;
     margin-left: auto;
     margin-right: auto;
@@ -23,7 +23,7 @@ h2{
 }
 form{
     color: antiquewhite;
-    width:35%;
+    width:50%;
     background-color: black;
     display: block;
     margin-left: auto;
