Add styles to the footer

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -25,6 +25,7 @@ input, button, textarea, select {
 /* #region General styles */
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #00414f;
 }
 
 input{
@@ -79,5 +80,19 @@ label.form_label-green {
     padding: 5px;
     border: 1px solid #454545;
     border-radius: 5px;
+}
+
+footer{
+    padding: 20px;
+    color: #fff;
+    text-align: center;
+}
+.copyright_link{
+    color: #eccccc;
+    text-decoration: none;
+    transition: color 0.5s;
+}
+.copyright_link:hover{
+    color: #fff;
 }
 
